<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/addBillFragment">

    <fragment
        android:id="@+id/addBillFragment"
        android:name="com.elyric.ricledger.ui.fragment.add.AddBillFragment"
        android:label="@string/add_bill_title"
        tools:layout="@layout/fragment_add_bill" >
        <action
            android:id="@+id/action_addBillFragment_to_addImplBillFragment"
            app:destination="@id/addImplBillFragment" />
    </fragment>
    <fragment
        android:id="@+id/billListFragment"
        android:name="com.elyric.ricledger.ui.fragment.list.BillListFragment"
        android:label="@string/bill_list_title"
        tools:layout="@layout/fragment_bill_list" />
    <fragment
        android:id="@+id/stateFragment"
        android:name="com.elyric.ricledger.ui.fragment.state.StateFragment"
        android:label="@string/state_title"
        tools:layout="@layout/fragment_state" />
    <fragment
        android:id="@+id/addImplBillFragment"
        android:name="com.elyric.ricledger.ui.fragment.add.AddImplBillFragment"
        android:label="@string/add_bill_impl_title"
        tools:layout="@layout/fragment_add_impl_bill" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.elyric.ricledger.ui.fragment.setting.SettingFragment"
        android:label="@string/setting_title"
        tools:layout="@layout/fragment_setting" />
</navigation>